# ADS

./: CMakeLists.txt  package.xml
AdsLib/: CMakeLists.txt
cmake/: ads-config.cmake
